# prueba-tecnica-siata

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  good-to-know.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0aeab9832675_create_shipments_table.py  0aeab9832675_create_shipments_table_down.sql  0aeab9832675_create_shipments_table_up.sql  3014e162f71a_create_products_table.py  3014e162f71a_create_products_table_down.sql  3014e162f71a_create_products_table_up.sql  53251f7879eb_add_continent_to_logistics_nodes.py  53251f7879eb_add_continent_to_logistics_nodes_down.sql  53251f7879eb_add_continent_to_logistics_nodes_up.sql  6e5a8352ee77_create_users_table_down.sql  6e5a8352ee77_create_users_table_up.sql  6e5a8352ee77_initial_migration.py  7d15d38ad794_alter_shipments_guide_number_length.py  7d15d38ad794_alter_shipments_guide_number_length_down.sql  7d15d38ad794_alter_shipments_guide_number_length_up.sql  a84710b933e3_create_customers_table.py  a84710b933e3_create_customers_table_down.sql  a84710b933e3_create_customers_table_up.sql  ead00eb76804_create_logistics_nodes.py  ead00eb76804_create_logistics_nodes_down.sql  ead00eb76804_create_logistics_nodes_up.sql  fddd97916db7_create_shipment_status_logs_table.py  fddd97916db7_create_shipment_status_logs_table_down.sql  fddd97916db7_create_shipment_status_logs_table_up.sql
app/: app_containers.py  main.py
app/core/: __init__.py  context.py  (+3 more)
docs/: crud_guide.md  testing_guide.md
scripts/: db-manage.sh  run-backend.sh  run-unit-test.sh
tests/: conftest.py
(+95 files in other folders)
