[project]
name = "prueba-tecnica-siata"
version = "0.1.0"
description = ""
authors = [
    {name = "Dan",email = "dgarcia232@soyudemedellin.edu.co"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "pydantic[email] (>=2.13.3,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "dependency-injector (>=4.49.0,<5.0.0)",
    "colorlog (>=6.10.1,<7.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "aiosmtplib (>=5.1.0,<6.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "prueba_tecnica_siata", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"
pytest-cov = "^7.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
